--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-shell": "~0.2.2",
     "grunt-coffeelint": "0.0.6",
-    "rimraf": "~2.2.2"
+    "rimraf": "~2.2.2",
+    "text-buffer": "2.x"
   }
 }
