--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "grunt-shell": "~0.2.2",
     "grunt-coffeelint": "0.0.6",
     "rimraf": "~2.2.2",
-    "text-buffer": "2.x"
+    "text-buffer": "2.x",
+    "q": "~1.0.1"
   }
 }
