Add support for css color function

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "property-accessors": "1.x",
     "mixto": "1.x",
     "oniguruma": "2.x",
-    "q": "~1.0.1"
+    "q": "~1.0.1",
+    "css-color-function": "0.1.x"
   },
   "devDependencies": {
     "jasmine-focused": "1.x",
